--- a/dados.properties
+++ b/dados.properties
@@ -5,9 +5,9 @@ DB_HOST = localhost
 DB_USER = root
 DB_USER_PASSWORD = qwe123
 DB_PORT = 4306
-DB_NAME = automacao_sj
+DB_NAME = automacao
 DIRETORIO_BACKUP = C:\\softline\\backups\\
-DIRETORIO_XML = 
+DIRETORIO_XML = C:\\softline\\repositorioXML
 DIRETORIO_CERTIFICADO = C:\\softline\\repositorioA1
 diasParaApagar = 1
 
