--- a/dados.properties
+++ b/dados.properties
@@ -1,13 +1,10 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
 DB_HOST = localhost
 DB_USER = root
 DB_USER_PASSWORD = qwe123
 DB_PORT = 4306
 DB_NAME = automacao
-DIRETORIO_BACKUP = C:\\softline\\backups\\
-DIRETORIO_XML = C:\\softline\\repositorioXML
-DIRETORIO_CERTIFICADO = C:\\softline\\repositorioA1
+DIRETORIO_BACKUP = /home/alexisbrabo/softline/backups/
+DIRETORIO_XML = /home/alexisbrabo/softline/repositorioXML
+DIRETORIO_CERTIFICADO = /home/alexisbrabo/softline/repositorioA1
 diasParaApagar = 1
 
