Ao tentar inutilizar uma numeração de nfe a mesma fazia a mesma verificação de numero usada na venda como nfce, adicionado condição para evitar este erro

--- a/dados.properties
+++ b/dados.properties
@@ -2,9 +2,9 @@ DB_HOST = localhost
 DB_USER = root
 DB_USER_PASSWORD = qwe123
 DB_PORT = 4306
-DB_NAME = automacao
+DB_NAME = automacao_pri
 DIRETORIO_BACKUP = /home/alexisbrabo/softline/backups/
-DIRETORIO_XML = /home/alexisbrabo/softline/repositorioXML
-DIRETORIO_CERTIFICADO = /home/alexisbrabo/softline/repositorioA1
+DIRETORIO_XML = /home/alexisbrabo/softline/slautomacao/repositorioXML
+DIRETORIO_CERTIFICADO = /home/alexisbrabo/softline/slautomacao/repositorioA1
 diasParaApagar = 1
 
